pkl-core/src/test/files/LanguageSnippetTests/input/errors/localFunctionWithTypeParameter.pkl
local function x<T>() = x